Incluido menu principal

--- a/nivel1.html
+++ b/nivel1.html
@@ -269,7 +269,7 @@
             ////////////////////////////////////
             ////////////////////
             dineroNecesario=500;
-            tiempoMaximo=5;
+            tiempoMaximo=5*60;
             
             planta1Precio=50;
             planta1TiempoDeVida=60;
@@ -953,7 +953,7 @@
                                             location.reload();
                                         });
                                         $("#noReiniciar").click(function(){
-                                            //location.href="nivel2.html";
+                                            location.href="seleccionJuego.html";
                         
                 });
                                     },500);
@@ -976,16 +976,16 @@
                     mensaje="Vida: "+plantas[num][11]+"<br>";  
                     switch(plantas[num][3]){
                         case 0:
-                            mensaje+="Estado: Recien plantado";
+                            mensaje+="Estado: Recien Plantado";
                             break;
                         case 1:
-                            mensaje+="Estado: Primeras hojitas";
+                            mensaje+="Estado: Planta Joven";
                             break;
                         case 2:
-                            mensaje+="Estado: To fuerte";
+                            mensaje+="Estado: Planta Adulta";
                             break;
                         case 3:
-                            mensaje+="Estado: To viejo";
+                            mensaje+="Estado: Planta Anciana";
                             break;
                     }
                     mensaje+="<br>";
