--- a/nivel3.html
+++ b/nivel3.html
@@ -1119,7 +1119,7 @@
                                             location.reload();
                                         });
                                         $("#noReiniciar").click(function(){
-                                            //location.href="nivel2.html";
+                                            location.href="seleccionJuego.html";
                         
                 });
                                     },500);
@@ -1164,7 +1164,7 @@
                                             location.reload();
                                         });
                                         $("#noReiniciar").click(function(){
-                                            //location.href="nivel2.html";
+                                            location.href="seleccionJuego.html";
                         
                 });
                                     },500);
