--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="menu.css">
     
     <script>
+        alert('asd');
                 myAudio = new Audio("alegregranja.mp3"); 
                 myAudio.addEventListener('ended', function() {
                 this.currentTime=0;
